src/objects/SFDC_Project__c.object
<CustomObject>
    <description>Project Management</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N40000001QB85EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N40000001QB86EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>R00N40000001QB88EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Days_Remaining__c</fullName>
        <formula>SFDC_Project_End_Date__c -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Duration__c</fullName>
        <formula>SFDC_Project_End_Date__c  -  SFDC_Project_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_End_Date__c</fullName>
        <label>Project End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Manager__c</fullName>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N40000001QB89EAG</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Name__c</fullName>
        <description>Descriptive Project Name</description>
        <label>Project Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Stage__c</fullName>
        <label>Project Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Start-up</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing Down</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Start_Date__c</fullName>
        <label>Project Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Project_Status__c</fullName>
        <label>Project Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Status_Description__c</fullName>
        <label>Status Description</label>
        <type>TextArea</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>SFDC_Project_Name__c</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>SFDC_Project_Manager__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>x0ActiveProjects</fullName>
        <columns>SFDC_Project_Name__c</columns>
        <columns>SFDC_Project_Stage__c</columns>
        <columns>SFDC_Project_Start_Date__c</columns>
        <columns>SFDC_Project_End_Date__c</columns>
        <columns>SFDC_Project_Manager__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SFDC_Project_Stage__c</field>
            <operation>notEqual</operation>
            <value>Closing Down</value>
        </filters>
        <label>0 - Active Projects</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Project Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>prevent_negative_duration</fullName>
        <active>true</active>
        <description>This validation, prevent for a End date less than Star date</description>
        <errorConditionFormula>SFDC_Project_Start_Date__c &gt; SFDC_Project_End_Date__c</errorConditionFormula>
        <errorMessage>End Date should be equals or greater than Start Date</errorMessage>
    </validationRules>
</CustomObject>